--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "testino",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "Tony Heupel (tchype) <tony@heupel.net>",
   "contributors": [],
   "main": "testino.js",
@@ -12,6 +12,6 @@
     "url": "https://github.com/tchype/testino.git"
   },
   "dependencies": {
-
+    "glob": ">=3.1.1"
   }
 }
